--- a/sistema_react/src/ui/styles/Login.module.css
+++ b/sistema_react/src/ui/styles/Login.module.css
@@ -83,13 +83,29 @@ form{
 
 
 .conta_user{
+  border: none;
+  outline: none;
   margin-top: 2rem;
+  font-size: 16px;
   color: red;
+  background-color: #dbe6ee;
   margin-bottom: 0.5rem;
+  cursor: pointer;
 }
 
-  
-.conta_user:hover{
+
+.conta_user2 {
+  outline: none;
+  border: none;
+  margin-top: 2rem;
+  font-size: 16px;
   color: red;
+  background-color: #dbe6ee;
+  margin-bottom: 0.8rem;
+  cursor: pointer;
+  border-bottom: 1px solid transparent; /* Adiciona uma borda transparente */
+}
+
+.conta_user:hover, .conta_user2:hover {
   border-bottom: 1px solid red;
 }
