--- a/sistema_react/src/ui/styles/NavBar.module.css
+++ b/sistema_react/src/ui/styles/NavBar.module.css
@@ -3,13 +3,24 @@
     height: 5rem;
     padding: 0 4rem;
     display: flex;
-    justify-content: end;
+    justify-content: space-between;
     align-items: center;
+}
+
+
+
+.logo{
+    color: #580808;
+    background-color: #c14040;
+    padding: 0.5rem;
+    border-radius: 20rem;
+    cursor: pointer;
 }
 
 .navbar{
     display: flex;
 }
+
 
 .list{
     height: 2rem;
