--- a/sistema_react/src/ui/styles/Dashboard.module.css
+++ b/sistema_react/src/ui/styles/Dashboard.module.css
@@ -1,11 +1,11 @@
-.hero{
+.hero {
     height: calc(100vh - 10rem);
-    background-color:  rgba(64,65,79,255);
+    background-color: rgba(64, 65, 79, 255);
     display: flex;
-    
+
 }
 
-.conteudo{
+.conteudo {
     margin-left: 4rem;
     padding: 10%;
     width: 20rem;
@@ -16,57 +16,52 @@
     align-items: center;
 }
 
-
-.titulo{
+.titulo {
     color: #FFFFFF;
     font-size: 43px;
 }
 
-.descricao{
+.descricao {
     color: #FFFFFF;
     font-size: 18px;
 }
 
-
-.container{
-   border: 1px solid red;
-   margin: 0 4rem;
+.container {
+    border: 1px solid red;
+    margin: 0 4rem;
 }
 
-.atracoes{
+.atracoes {
     display: grid;
-   margin-bottom: 1rem;
+    margin-bottom: 1rem;
     grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
     grid-gap: 2rem;
     margin-top: 4rem;
-   place-items: center;
+    place-items: center;
 }
 
-
-.evento_1{
+.evento_1 {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     gap: 2rem;
-    width:10rem;
+    width: 10rem;
     border: 1px solid red;
 }
 
-.evento_1:hover{
-    box-shadow:  3px 3px 3px 1px rgba(0, 0, 0, 0.215);
+.evento_1:hover {
+    box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, 0.215);
     transition: 0.2s;
 }
 
-
-.container_2{
+.container_2 {
     background-color: #ab5e68;
     display: flex;
     justify-content: center;
 }
 
-
-.container_add{
+.container_add {
     display: flex;
     width: 70%;
     justify-content: center;
@@ -76,8 +71,7 @@
     padding: 2rem 0;
 }
 
-
-.titulo_container{
+.titulo_container {
     font-size: 3rem;
     max-width: 40%;
     text-align: left;
@@ -86,30 +80,24 @@
     word-wrap: break-word;
 }
 
-.link_container_2{
+.link_container_2 {
     border-color: #fff;
     border: 1px solid;
     border-radius: 30px;
     padding: 0 4rem;
     color: #fff;
     font-size: 17px;
-    font-weight: 5  00;
+    font-weight: 5 00;
     line-height: 4rem;
 }
 
-
-.link_container_2:hover{
+.link_container_2:hover {
     background-color: #fff !important;
     cursor: pointer;
     transition: 0.3s;
 }
 
-
-.container_app{
+.container_app {
     color: #fff;
     max-width: 40%;
 }
-
-
-
-
