--- a/sistema_react/src/ui/styles/Tabelas.module.css
+++ b/sistema_react/src/ui/styles/Tabelas.module.css
@@ -1,26 +1,95 @@
+.content {
+  background-color: rgba(179, 179, 255, 0.737);
+  flex-grow: 1; 
+  padding: 20px; 
+}
+
+.content{
+width: 100%;
+display: flex;
+flex-direction: column;
+gap: 1rem;
+}
+
+.pesquisa{
+height: 8rem;
+display: flex;
+flex-direction: column;
+align-items: center;
+padding: 1rem;
+justify-content: center;
+background-color: rgb(179, 179, 209);
+}
+
+.pesquisa_user{
+width: 70%;
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+
+.pesquisa_user > input{
+width: 60%;
+border: none;
+outline: none;
+border-radius: 2rem;
+line-height: 3rem;
+padding-left: 12px;
+font-size: 17px;
+color:  #12455f;
+}
+
+
+.add{
+  text-align: end;
+  margin-top: 1rem;
+}
+
+
+.new{
+  border: 1px solid transparent;
+  font-size: 18px;
+  background-color: rgb(57, 91, 195);
+  padding: 0.4rem;
+  color: rgb(179, 183, 193);
+  font-weight: 700;
+  cursor: pointer;
+  border-radius: 1rem;
+  box-shadow: 0px 10px 40px -12px #051f4852;
+  letter-spacing: 1px;
+    line-height: 1.5rem;
+}
+
+
+
+.new:hover{
+  color: white;
+}
+
 .tabela{
-    width: 100%;
+    width: 95%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+   
+    overflow-y: auto;
 
 }
 
-
 table {
-  width: 80%;
+  width: 95%;
+ 
   border-collapse: collapse;
   border: 1px solid #ddd;
 }
 
-  
 th, td {
   border: 1px solid #9d9d9d;
   padding: 10px;
   text-align: center;
 }
-
 
 th {
   background-color: #85b8d6;
@@ -28,11 +97,9 @@ th {
   font-weight: bold;
 }
 
-
 .linhaInativa{
   background-color: #ef9393;
 }
-
 
 .botoes{
   display: flex;
@@ -40,7 +107,6 @@ th {
   justify-content: center;
   gap:17px;
 }
-
 
 .acao{
     display: flex;
@@ -52,15 +118,12 @@ th {
     border-radius: 10px;
   }
 
-
   .acao > a{
     font-size: 16px;
     color: rgb(237, 230, 230);
     margin: 4px;
     font-weight: 600;
   }
-
-
 
   .botao{
     width: 40%;
@@ -79,8 +142,6 @@ th {
     box-shadow: 0px 10px 40px -12px #051f4852;
   }
   
-
-
   .bnt_table{
     cursor: pointer;
     width: 100%;
@@ -93,13 +154,10 @@ th {
     box-shadow: 0px 10px 40px -12px #051f4852;
   }
 
-
   .bnt_table:hover{
     background-color: rgb(15, 84, 162);
     color: rgb(239, 241, 245);
   }
-
-
 
 .btnEditar{
     cursor: pointer;
@@ -115,8 +173,7 @@ th {
     box-shadow: 0px 10px 40px -12px #051f4852;
   }
 
-
-  .btnExcluir{
+.btnExcluir{
     cursor: pointer;
     width: 100%;
     line-height: 1.5rem;
@@ -141,3 +198,61 @@ th {
     color: rgb(239, 241, 245);
 
   }
+
+.pagination{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.6rem;
+}  
+
+.pages{
+  font-size: 18px;
+  font-weight: 600;
+  color: rgb(179, 183, 193);
+  border: 1px solid transparent;
+  background-color: rgb(66, 89, 158);
+  margin-top: 1.5rem;
+  padding: 0.5rem;
+  border-radius: 0.6rem;
+  line-height: 1rem;
+  cursor: pointer;
+
+}
+
+
+.pages:hover{
+  color: white;
+
+}
+
+.controls {
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.labelSelect {
+  font-size: 16px;
+  color: #333;
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
+}
+
+.selectInput {
+  margin-left: 10px;
+  padding: 8px 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color:  rgba(179, 179, 255, 0.737);
+  font-size: 16px;
+  color: #333;
+  cursor: pointer;
+}
+
+.selectInput:focus {
+  outline: none;
+  border-color: #666;
+}
