--- a/sistema_react/src/ui/styles/Dashboard.module.css
+++ b/sistema_react/src/ui/styles/Dashboard.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: start;
 
-    background-image: url('../../assets/img/apresentacao.png');
+    background-image: url('../../assets/img/shows.jpg');
     background-size: 100% 100%; /* Ajusta tamanho da imagem e cobre o elemento com o gradiente */
     background-position: center; /* Posicionamento da imagem e centralização do gradiente */
     background-repeat: repeat;
@@ -17,10 +17,10 @@
     display: flex;
     flex-direction: column;
     gap: 2rem; /* Reduz o espaço entre elementos se necessário */
-    background-color: #ab5e68;
+    background-color: #ffa41b;
     border-radius: 1rem;
     padding: 1rem;
-    margin-left: 4rem;
+    margin: 4rem 0 0 4rem;
     justify-content: start;
     align-items: center;
     box-sizing: border-box; /* Inclui padding e border no cálculo de width */
@@ -100,20 +100,27 @@
     cursor: pointer;
     padding: 0.5rem;
     color: #12455f;
-    background-color: rgb(224, 113, 113);
+    background-color: #ffa41b;
+
     border-radius: 2rem;
     margin-bottom: 6px;
 }
 
 .subscriber:hover{
-    background-color: red;
-    color: rgb(235, 224, 224);
+    background-color:black ;
+    color: white;
 }
 
 .container_2 {
-    background-color: #ab5e68;
+    background-color: #000000;
+
     display: flex;
     justify-content: center;
+}
+
+.container_app {
+    color: #ffa41b;
+    max-width: 40%;
 }
 
 .container_add {
@@ -130,7 +137,7 @@
     font-size: 3rem;
     max-width: 40%;
     text-align: left;
-    color: #fff;
+    color: #ffa41b;
     font-weight: 800;
     word-wrap: break-word;
 }
@@ -140,7 +147,7 @@
     border: 1px solid;
     border-radius: 30px;
     padding: 0 4rem;
-    color: #fff;
+    color: #ffa41b;
     font-size: 17px;
     font-weight: 5 00;
     line-height: 4rem;
@@ -152,7 +159,3 @@
     transition: 0.3s;
 }
 
-.container_app {
-    color: #fff;
-    max-width: 40%;
-}
