--- a/sistema_react/src/ui/styles/Evento.module.css
+++ b/sistema_react/src/ui/styles/Evento.module.css
@@ -25,7 +25,7 @@
 }
 
 .show{
-    background-color: #d3dee3;
+    background-color: rgba(0, 0, 0, 0.242);
 }
 
 .atracoes {
@@ -70,13 +70,13 @@
     font-weight: 700;
     cursor: pointer;
     padding: 0.5rem;
-    color: #12455f;
-    background-color: rgb(224, 113, 113);
+    color: #ffa41b;
+    background-color: black;
     border-radius: 2rem;
     margin-bottom: 6px;
 }
 
 .subscriber:hover{
-    background-color: red;
-    color: rgb(235, 224, 224);
+    background-color: #ffa41b;
+    color: black;
 }
