--- a/sistema_react/src/ui/styles/Login.module.css
+++ b/sistema_react/src/ui/styles/Login.module.css
@@ -1,5 +1,5 @@
 .page {
-  background-color: #dbe6ee;
+  background-color: rgba(0, 0, 0, 0.242);
   min-height: calc(100vh - 5rem);
   display: flex;
   justify-content: center;
@@ -15,7 +15,6 @@
   align-items: center;
   overflow-y: auto;
   padding: 2rem;
-  
 }
 
 
@@ -92,15 +91,16 @@ form {
   cursor: pointer;
   font-weight: 600;
   letter-spacing: 2px;
-  color: rgb(255, 255, 255);
-  background: rgb(201, 101, 101);
+  color: #12455f;
+  background: #ffa41b;
   transition: 0.1s;
   box-shadow: 0px 10px 40px -12px #051f4852;
 }
 
 
 .btn:hover {
-  background-color: rgb(223, 75, 75);
+  background-color: rgba(0, 0, 0, 0.831);
+  color: #ffa41b;
 }
 
 
@@ -110,7 +110,6 @@ form {
   margin-top: 2rem;
   font-size: 16px;
   color: red;
-  background-color: #dbe6ee;
   margin-bottom: 0.5rem;
   cursor: pointer;
 }
@@ -118,17 +117,15 @@ form {
 
 .conta_user2 {
   outline: none;
-  border: none;
   margin-top: 2rem;
   font-size: 16px;
-  color: red;
-  background-color: #dbe6ee;
+  color: #12455f;
+  background-color: rgba(0, 0, 0, 0); 
   margin-bottom: 0.8rem;
   cursor: pointer;
-  border-bottom: 1px solid transparent;
+  border: 1px solid transparent;
 }
 
-.conta_user:hover,
-.conta_user2:hover {
+.conta_user2:hover{
   border-bottom: 1px solid red;
 }
