criacao de arquivos para cada rota

--- a/sistema_react/src/ui/styles/NavBar.module.css
+++ b/sistema_react/src/ui/styles/NavBar.module.css
@@ -13,7 +13,7 @@
     align-items: center;
     justify-content: center;
     background-color: #ffa41b;
-
+    margin-left: 3.98rem;
     height: 60px;
     border: 1px solid transparent;
     border-radius: 1rem;
