--- a/sistema_react/src/ui/styles/Footer.module.css
+++ b/sistema_react/src/ui/styles/Footer.module.css
@@ -1,8 +1,11 @@
 .rodape {
     display: flex;
     flex-direction: row;
-    padding: 2rem;
-    justify-content: space-around;
+    width: 100%;
+    gap: 20rem;
+    margin: 4rem 0 2rem 8rem;
+
+    align-items: start;
 }
 
 .itens_empresa {
@@ -39,6 +42,7 @@ a {
 
 .adicionais {
     border-top: 1px solid #ccc;
+    width: 100vw;
 }
 
 .info {
