--- a/sistema_react/src/ui/styles/Dashboard.module.css
+++ b/sistema_react/src/ui/styles/Dashboard.module.css
@@ -3,42 +3,41 @@
     display: flex;
     align-items: center;
     justify-content: start;
-
     background-image: url('../../assets/img/shows.jpg');
-    background-size: 100% 100%; /* Ajusta tamanho da imagem e cobre o elemento com o gradiente */
-    background-position: center; /* Posicionamento da imagem e centralização do gradiente */
+    background-size: 100% 100%;
+    background-position: center; 
     background-repeat: repeat;
 }
 
 
 .conteudo {
-    width: 90%; /* Largura responsiva */
-    max-width: 400px; /* Máxima largura para evitar que fique muito largo em telas grandes */
+    width: 90%; 
+    max-width: 400px; 
     display: flex;
     flex-direction: column;
-    gap: 2rem; /* Reduz o espaço entre elementos se necessário */
+    gap: 2rem; 
     background-color: #ffa41b;
     border-radius: 1rem;
     padding: 1rem;
     margin: 4rem 0 0 8rem;
     justify-content: start;
     align-items: center;
-    box-sizing: border-box; /* Inclui padding e border no cálculo de width */
+    box-sizing: border-box; 
 }
 
 .titulo {
     color: #12455f;
-    font-size: calc(18px + 1.5vw); /* Fonte escalável baseada no viewport width */
+    font-size: calc(18px + 1.5vw); 
     padding: 0.5rem;
-    text-align: center; /* Centraliza o texto */
+    text-align: center; 
 }
 
 .descricao {
     color: #12455f;
-    font-size: calc(8px + 1vw); /* Fonte escalável baseada no viewport width */
+    font-size: calc(8px + 1vw);
     font-weight: 800;
     padding: 1rem;
-    text-align: center; /* Centraliza o texto */
+    text-align: center; 
 }
 
 
@@ -147,11 +146,10 @@
     border-color: #fff;
     border: 1px solid;
     border-radius: 30px;
-    padding: 0 4rem;
+    padding: 1rem 4rem;
     color: #ffa41b;
     font-size: 17px;
-    font-weight: 5 00;
-    line-height: 4rem;
+    font-weight: 500;
 }
 
 .link_container_2:hover {
@@ -160,3 +158,141 @@
     transition: 0.3s;
 }
 
+
+
+@media screen and (max-width:1080px) {
+    .atracoes{
+        grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .hero{
+        background-repeat: no-repeat;
+        background-size: auto 100%;
+    }
+
+    .conteudo{
+        max-width: 260px;
+    }
+
+    .titulo{
+        font-size: calc(15px + 1.1vw);
+    }
+
+
+    .atracoes{
+        grid-template-columns: minmax(0, 1fr);
+
+    }
+}
+
+@media screen and (max-width:790px) {
+    .titulo_container{
+        font-size: 30px;
+    }
+
+    .container_app{
+        font-size: 18px;
+    }
+}
+
+
+
+@media screen and (max-width:550px) {
+    .titulo_container{
+        font-size: 25px;
+    }
+
+    .container_app{
+        font-size: 17px;
+    }
+
+    .link_container_2{
+        padding: 1rem 2rem;
+        font-size: 15px;     
+    }
+}
+
+
+@media screen and (max-width:450px) {
+    .titulo_container{
+        font-size: 23px;
+    }
+
+    .container_app{
+        font-size: 17px;
+    }
+
+    .link_container_2{
+        padding: 1rem 2rem;
+        font-size: 15px;     
+    }
+}
+
+
+
+@media screen and (max-width:420px) {
+    .titulo_container{
+        font-size: 20px;
+    }
+
+    .container_app{
+        font-size: 17px;
+    }
+
+    .link_container_2{
+        padding: 1rem 2rem;
+        font-size: 15px;     
+    }
+}
+
+@media screen and (max-width:420px) {
+    .conteudo{
+        margin: 0 auto;
+        max-width: 400px;
+    }
+
+    
+    .titulo{
+        width: 100%;
+    }
+    .titulo_eventos{
+        font-size: 22px;
+    }
+}
+
+@media screen and (max-width:391px) {
+    
+    .conteudo{
+    
+        max-width: 400px;
+        gap: 1rem;
+        padding: 0;
+    }
+
+    .imagens{
+        width: 85%;
+    }
+
+    .titulo_eventos{
+        font-size: 30px;
+    }
+
+    .titulo{
+        font-size: 19px;
+    }
+
+    .titulo_container{
+        font-size: 14px;
+    }
+
+    .container_app{
+        font-size: 12px;
+    }
+
+    .link_container_2{
+        padding: 1rem 1rem;     
+    }
+}
