--- a/sistema_react/src/ui/styles/Footer.module.css
+++ b/sistema_react/src/ui/styles/Footer.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    gap: 20rem;
+    gap: 15rem;
     margin: 4rem 0 2rem 8rem;
 
     align-items: start;
@@ -46,13 +46,13 @@ a {
 }
 
 .info {
-    margin: 0 2rem;
-    padding: 2rem;
+    padding: 1rem;
+    width: 100%;
 }
 
 .footer_group {
-
     display: flex;
+    width: 100%;
     justify-content: space-around;
     align-items: center;
 }
@@ -68,4 +68,68 @@ a {
 .redes>img {
     width: 20px;
     height: 20px;
+}
+
+.apps{
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+@media screen and (max-width:1200px) {
+    .rodape{
+        gap: 10rem;
+    }
+}
+
+
+@media screen and (max-width:915px) {
+    .rodape{
+        gap: 8rem;
+    }
+}
+
+
+@media screen and (max-width:850px) {
+    .rodape{
+        gap: 6rem;
+    }
+}
+
+
+@media screen and (max-width:820px) {
+    .rodape{
+        gap: 5rem;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    .footer_group{
+        align-items: center;
+        flex-direction: column;
+        gap: 2rem;
+    }
+}
+
+@media screen and (max-width:760px) {
+    .footer_group{
+        flex-direction: column;
+        gap: 2rem;
+    }
+}
+
+@media screen and (max-width:500px) {
+    .dados{
+        text-align: center;
+    }
+
+    .info{
+        padding: 0;
+    }
+
+    .footer_group{
+        padding: 2rem;
+        gap: 3rem;
+
+    }
 }
