--- a/sistema_react/src/ui/styles/Login.module.css
+++ b/sistema_react/src/ui/styles/Login.module.css
@@ -61,11 +61,11 @@ form {
 }
 
 .select_input {
-  width: 80%;
+  width: 81%;
   padding: 15px;
   background-color: white;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 10px;
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
   cursor: pointer;
 }
@@ -129,3 +129,15 @@ form {
 .conta_user2:hover{
   border-bottom: 1px solid red;
 }
+
+@media screen and (max-width:820px) {
+  .page{
+    min-height: calc(100vh - 8rem) !important;
+  }
+} 
+
+@media screen and (max-width:790px) {
+  .page{
+    min-height: calc(100vh - 14rem);
+  }
+} 
