--- a/sistema_react/src/ui/styles/Tabelas.module.css
+++ b/sistema_react/src/ui/styles/Tabelas.module.css
@@ -1,7 +1,6 @@
 .content {
   background-color: rgba(0, 0, 0, 0.242);
-  flex-grow: 1; 
-  padding: 20px; 
+  flex-grow: 1;  
 }
 
 .content{
@@ -63,46 +62,38 @@ color:  #12455f;
   box-shadow: 0px 10px 40px -12px #051f4852;
 }
 
-
-
 .new:hover{
   background: rgb(66, 89, 158);
   color: rgb(239, 241, 245);
 }
 
 .tabela{
-    width: 95%;
+    width: 98%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-   
+    justify-content: center;
     overflow-y: auto;
-
-}
+    overflow-x: auto;
+    margin: 0 auto;
+  }
 
 table {
-  width: 95%;
- 
+  width: 100%;
   border-collapse: collapse;
-  border: 1px solid #ddd;
 }
 
 th, td {
-  border: 1px solid #9d9d9d;
+  border: 0.6px solid #9d9d9d;
   padding: 10px;
   text-align: center;
+  overflow-x: auto;
 }
 
 th {
-  background-color: #85b8d6;
   color: #12455f;
   font-weight: bold;
 }
 
-.linhaInativa{
-  background-color: #ef9393;
-}
 
 .botoes{
   display: flex;
@@ -150,7 +141,6 @@ th {
     width: 100%;
     height: 100%;
     border-radius: 9px;
-    background: rgb(34, 117, 210, 255);
     transition: 0.2s;
     letter-spacing: 1px;
     color: rgb(179, 183, 193);
@@ -207,11 +197,12 @@ th {
   align-items: center;
   justify-content: center;
   gap: 0.6rem;
+  width: 100%;
+  margin: 1rem 0 1rem;
 }  
 
 .pages{
   cursor: pointer;
-    width: 5%;
     font-size: 15px;
     padding: 0.5rem;
     border: none;
@@ -225,9 +216,6 @@ th {
 
 }
 
-
-
-
 .pages:hover{
   color: white;
 
@@ -238,6 +226,7 @@ th {
   justify-content: flex-start;
   margin-top: 20px;
   margin-bottom: 20px;
+  margin-left: 1rem;
 }
 
 .labelSelect {
@@ -253,7 +242,7 @@ th {
   padding: 8px 12px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  background-color:  rgba(179, 179, 255, 0.737);
+  background-color:  rgba(0, 0, 0, 0);
   font-size: 16px;
   color: #333;
   cursor: pointer;
@@ -262,4 +251,34 @@ th {
 .selectInput:focus {
   outline: none;
   border-color: #666;
+}
+
+
+@media screen and (max-width:450px) {
+  
+  .controls{
+    margin-left: 1rem;
+
+  }
+  .tabela{
+    margin-left: 0;
+  }
+  
+}
+
+@media screen and (max-width:415px) {
+  .content{
+    padding: 0;
+  }
+  .controls{
+    margin-left: 1rem;
+  }
+
+  .tabela{
+    margin-left: 0;
+  }
+  
+  .pesquisa_user{
+    width: 100%;
+  }
 }
