--- a/sistema_react/src/ui/styles/Dashboard.module.css
+++ b/sistema_react/src/ui/styles/Dashboard.module.css
@@ -40,7 +40,6 @@
     text-align: center; 
 }
 
-
 .container {
     margin: 0 4rem;
 }
@@ -51,7 +50,6 @@
     grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
     grid-gap: 2rem;
     box-shadow: 2px 2px 2px 2px rgba(156, 143, 143, 0.505);
-
     place-items: center;
     background-color: #FFF2E7;
     padding: 1rem;
@@ -90,6 +88,13 @@
     padding: 0.4rem;
     object-fit: cover;
     height: 200px;
+}
+
+.add_events{
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    margin: 2rem 0 1rem;
 }
 
 .subscriber{
@@ -159,11 +164,9 @@
 }
 
 
-
 @media screen and (max-width:1080px) {
     .atracoes{
         grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
-
     }
 }
 
@@ -188,16 +191,15 @@
     }
 }
 
+
 @media screen and (max-width:790px) {
     .titulo_container{
         font-size: 30px;
     }
-
     .container_app{
         font-size: 18px;
     }
 }
-
 
 
 @media screen and (max-width:550px) {
@@ -232,7 +234,6 @@
 }
 
 
-
 @media screen and (max-width:420px) {
     .titulo_container{
         font-size: 20px;
@@ -253,7 +254,6 @@
         margin: 0 auto;
         max-width: 400px;
     }
-
     
     .titulo{
         width: 100%;
@@ -262,6 +262,7 @@
         font-size: 22px;
     }
 }
+
 
 @media screen and (max-width:391px) {
     
