--- a/sistema_react/src/ui/styles/Footer.module.css
+++ b/sistema_react/src/ui/styles/Footer.module.css
@@ -1,10 +1,10 @@
 .rodape {
-    display: flex;
-    flex-direction: row;
+    display: grid;
     width: 100%;
-    gap: 15rem;
-    margin: 4rem 0 2rem 8rem;
-
+    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
+    margin: 4rem 0 2rem 3rem;
+    grid-gap: 1rem;
+    place-items: center;
     align-items: start;
 }
 
@@ -62,7 +62,6 @@ a {
     gap: 2rem;
     justify-content: center;
     align-items: center;
-
 }
 
 .redes>img {
@@ -77,30 +76,44 @@ a {
     gap: 1rem;
 }
 
-@media screen and (max-width:1200px) {
+
+@media screen and (max-width:1016px) {
     .rodape{
-        gap: 10rem;
+        grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
     }
 }
 
-
-@media screen and (max-width:915px) {
+@media screen and (max-width:920px) {
     .rodape{
-        gap: 8rem;
+        gap: 3rem;
+        place-items: flex-start;
+        width: 100%;
+        margin-left: 8rem;
+        grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+    }
+}
+
+@media screen and (max-width:870px) {
+    .rodape{
+        place-items: flex-start;
+        width: 100%;
+        margin-left: 8rem;
+        grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+
     }
 }
 
 
 @media screen and (max-width:850px) {
     .rodape{
-        gap: 6rem;
+        grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+
     }
 }
 
 
 @media screen and (max-width:820px) {
     .rodape{
-        gap: 5rem;
         flex-direction: column;
         flex-wrap: wrap;
     }
@@ -111,12 +124,22 @@ a {
     }
 }
 
+
 @media screen and (max-width:760px) {
     .footer_group{
         flex-direction: column;
         gap: 2rem;
     }
 }
+
+
+@media screen and (max-width:720px) {
+    .rodape{
+        place-items: flex-start;
+        grid-template-columns: minmax(0, 1fr);
+    }
+}
+
 
 @media screen and (max-width:500px) {
     .dados{
@@ -128,8 +151,16 @@ a {
     }
 
     .footer_group{
-        padding: 2rem;
+        margin-top: 2rem;
         gap: 3rem;
 
+    }
+
+    .rodape{
+        justify-content: start;
+        align-items: center;
+        width: 50%;
+        place-items: flex-start;
+        grid-template-columns: minmax(0, 1fr);
     }
 }
