--- a/sistema_react/src/ui/styles/NavBar.module.css
+++ b/sistema_react/src/ui/styles/NavBar.module.css
@@ -1,10 +1,10 @@
 .menuNav {
     background-color: #FFF2E7;
     display: flex;
-    height: auto; /* Alterado para altura automática */
-    padding: 1rem; /* Alterado para espaçamento uniforme */
+    height: auto;
+    padding: 1rem; 
     width: 100%;
-    flex-wrap: wrap; /* Permitir que os itens envolvam para a próxima linha */
+    flex-wrap: wrap; 
     justify-content: space-between;
     align-items: center;
 }
@@ -18,7 +18,6 @@
     height: 60px;
     border: 1px solid transparent;
     border-radius: 1rem;
-
 }
 
 .logo {
@@ -40,7 +39,6 @@
     display: flex;
     margin-right: 8rem;
 }
-
 
 .list {
     height: 2rem;
@@ -65,12 +63,12 @@ a:hover {
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
-        height: 28rem;
+        min-height: 574px;
         padding: 0;
     }
 
     .container_logo {
-        margin: 1rem 0; /* Alterado para margem superior e inferior */
+        margin: 1rem 0; 
     }
 
     .navbar {
@@ -81,7 +79,7 @@ a:hover {
     .list {
         flex-direction: column;
         width: 100%;
-        gap: 5rem; /* Removido o espaçamento entre os itens */
+        gap: 5rem;
     }
 
     .item{
@@ -95,6 +93,4 @@ a:hover {
     .item > a {
         padding: 1rem;
     }
-
-
 }
