--- a/sistema_react/src/ui/styles/Relatorio.module.css
+++ b/sistema_react/src/ui/styles/Relatorio.module.css
@@ -15,7 +15,23 @@
     gap: 2rem;
 }
 
+h2, h4{
+    color: #12455f;
+}
 
+h4{
+    font-size: 19px;
+}
 .total{
-    margin-top: 2rem;
+    margin-top:2rem;
+}
+
+@media screen and (max-width:415px) {
+    h2{
+        font-size: 17px;
+    }
+
+    .total{
+        margin-top: 2rem;
+    }
 }
